created Payment and loader

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<title>DebtSnap</title>
+		<meta
+			name="description"
+			content="Streamline your finances with our devt tracking app - effortlessly manage IOUs and split expenses among friends."
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
