--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon.png" sizes="400x400">
+		<link rel="mask-icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" color="#f1fffa"/>
+		<meta name="theme-color" content="#ffffff">
 		<title>DebtSnap</title>
 		<meta
 			name="description"
-			content="Streamline your finances with our devt tracking app - effortlessly manage IOUs and split expenses among friends."
+			content="Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends."
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
