--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="apple-touch-icon" href="%sveltekit.assets%/icon.png" sizes="400x400">
-		<link rel="mask-icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" color="#f1fffa"/>
+		<link rel="icon" href="/favicon.ico">
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+		<link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
 		<meta name="theme-color" content="#ffffff">
 		<title>DebtSnap</title>
 		<meta
