--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-		<link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
-		<meta name="theme-color" content="#ffffff">
+		<link rel="manifest" href="/%sveltekit.assets%/manifest.json" />
 		<title>DebtSnap</title>
-		<meta
-			name="description"
-			content="Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends."
-		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
