--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="manifest" href="/%sveltekit.assets%/manifest.json" />
 		<title>DebtSnap</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#f1fffa">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
