--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 		<link rel="manifest" href="/%sveltekit.assets%/manifest.json" />
 		<title>DebtSnap</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="/%sveltekit.assets%/icon512_maskable.png">
+		<link rel="icon" href="/%sveltekit.assets%/favicon.svg">
+		<link rel="mask-icon" href="/%sveltekit.assets%/favicon.svg">
+
 		<meta name="theme-color" content="#f1fffa">
 		%sveltekit.head%
 	</head>
