--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="manifest" href="/%sveltekit.assets%/manifest.json" />
 		<title>DebtSnap</title>
+		<link rel="icon" type="image/png" href="/%sveltekit.assets%/icon512_maskable.png"/>
+		<link rel="icon" href="/%sveltekit.assets%/favicon.svg"/>
+		<link rel="mask-icon" href="/%sveltekit.assets%/favicon.svg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/png" href="/%sveltekit.assets%/icon512_maskable.png">
-		<link rel="icon" href="/%sveltekit.assets%/favicon.svg">
-		<link rel="mask-icon" href="/%sveltekit.assets%/favicon.svg">
 		<meta name="description" content="Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends.">
 		<meta name="theme-color" content="#f1fffa">
 		%sveltekit.head%
