--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<title>DebtSnap</title>
 		<link rel="icon" type="image/png" href="/%sveltekit.assets%/icon512_maskable.png"/>
 		<link rel="icon" href="/%sveltekit.assets%/favicon.svg"/>
+		<link rel="apple-touch-icon" href="/%sveltekit.assets%/icon512_maskable.png"/>
 		<link rel="mask-icon" href="/%sveltekit.assets%/favicon.svg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Streamline your finances with our debt tracking app - effortlessly manage IOUs and split expenses among friends.">
